syntax = "proto3";
package actions;

service Controller {
  rpc Start    ( StartRequest    ) returns ( OpResponce    );
  rpc Stop     ( StopRequest     ) returns ( OpResponce    );
  rpc Command  ( CommandRequest  ) returns ( OpResponce    );
  rpc Download ( DownloadRequest ) returns ( stream WorldDownload );
  rpc Backup   ( BackupRequest   ) returns ( OpResponce    );
  rpc Auth     ( AuthRequest     ) returns ( AuthResponce  );
}

message AuthResponce{
  OpResult result = 1;
  string comment = 2;
  bytes key = 3;
}

message StartRequest {
  bytes token = 1;
}

message StopRequest {
  bytes token = 1;
}

message DownloadRequest{
  bytes token = 1;
}


message BackupRequest {
  bytes token = 1;
}

message CommandRequest{
  string command = 1;
  bytes token = 2;
}
 
enum OpResult{
  Success = 0;
  Fail = 1;
  Denied = 2;
}

message WorldDownload{
  OpResult result = 1;
  string comment = 2;
  bytes data = 3;
  uint64 size = 4;
}


message OpResponce{
  OpResult result = 1;
  string comment = 2;
}

enum AuthAction{
  Start = 0;
  Stop = 1;
  Command = 2;
  Download = 3;
  Backup = 4;
}


message AuthRequest{
  AuthAction action = 1;
}
